<resources>
    <string name="app_name">Thermal Monitor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_graph">Graph</string>
    <string name="tab_leds">Leds</string>
    <string name="tab_values">Values</string>
    <string name="devicesBtn">Get Devices</string>
    <string name="disconnectBtn">Disconnect</string>
    <string name="initialRb">Initial</string>
    <string name="waitRb">Wait</string>
    <string name="prepurgeRb">Prepurge</string>
    <string name="interpurgeRb">Interpurge</string>
    <string name="ignitionRb">Ignition</string>
    <string name="burnRb">Burning</string>
    <string name="exctinctRb">Extinction</string>
    <string name="postpurgeRb">Postpurge</string>
    <string name="circulationRb">Circulation</string>
    <string name="errorRb">Error</string>
    <string name="connectBtn">Connect</string>
    <string name="pref_key_dhwFlow_vis">pref_key_dhwFlow_vis</string>
    <string name="pref_key_dhwFlow_scale">pref_key_dhwFlow_scale</string>
    <string name="pref_key_dhwFlow_color">pref_key_dhwFlow_color</string>
    <string name="pref_key_chFlowTemp_vis">pref_key_chFlowTemp_vis</string>
    <string name="pref_key_chFlowTemp_scale">pref_key_chFlowTemp_scale</string>
    <string name="pref_key_chFlowTemp_color">pref_key_chFlowTemp_color</string>
    <string name="pref_key_ionVoltage_vis">pref_key_ionVoltage_vis</string>
    <string name="pref_key_ionVoltage_scale">pref_key_ionVoltage_scale</string>
    <string name="pref_key_ionVoltage_color">pref_key_ionVoltage_color</string>
    <string name="pref_key_extTemp_vis">pref_key_extTemp_vis</string>
    <string name="pref_key_extTemp_scale">pref_key_extTemp_scale</string>
    <string name="pref_key_extTemp_color">pref_key_extTemp_color</string>
    <string name="pref_key_chReturnTemp_vis">pref_key_chReturnTemp_vis</string>
    <string name="pref_key_chReturnTemp_scale">pref_key_chReturnTemp_scale</string>
    <string name="pref_key_chReturnTemp_color">pref_key_chReturnTemp_color</string>
    <string name="pref_key_dhwTemp_vis">pref_key_dhwTemp_vis</string>
    <string name="pref_key_dhwTemp_scale">pref_key_dhwTemp_scale</string>
    <string name="pref_key_dhwTemp_color">pref_key_dhwTemp_color</string>
    <string name="pref_key_tankS1Temp_vis">pref_key_tankS1Temp_vis</string>
    <string name="pref_key_tankS1Temp_scale">pref_key_tankS1Temp_scale</string>
    <string name="pref_key_tankS1Temp_color">pref_key_tankS1Temp_color</string>
    <string name="pref_key_tankS2Temp_vis">pref_key_tankS2Temp_vis</string>
    <string name="pref_key_tankS2Temp_scale">pref_key_tankS2Temp_scale</string>
    <string name="pref_key_tankS2Temp_color">pref_key_tankS2Temp_color</string>
    <string name="pref_key_exhaustTemp_vis">pref_key_exhaustTemp_vis</string>
    <string name="pref_key_exhaustTemp_scale">pref_key_exhaustTemp_scale</string>
    <string name="pref_key_exhaustTemp_color">pref_key_exhaustTemp_color</string>
    <string name="pref_key_fanPwm_vis">pref_key_fanPwm_vis</string>
    <string name="pref_key_fanPwm_scale">pref_key_fanPwm_scale</string>
    <string name="pref_key_fanPwm_color">pref_key_fanPwm_color</string>
    <string name="pref_key_fanRpm_vis">pref_key_fanRpm_vis</string>
    <string name="pref_key_fanRpm_scale">pref_key_fanRpm_scale</string>
    <string name="pref_key_fanRpm_color">pref_key_fanRpm_color</string>
    <string name="pref_key_chPressure_vis">pref_key_chPressure_vis</string>
    <string name="pref_key_chPressure_scale">pref_key_chPressure_scale</string>
    <string name="pref_key_chPressure_color">pref_key_chPressure_color</string>
    <string name="pref_key_chSetTempe_vis">pref_key_chSetTempe_vis</string>
    <string name="pref_key_chSetTemp_scale">pref_key_chSetTemp_scale</string>
    <string name="pref_key_chSetTemp_color">pref_key_chSetTemp_color</string>
    <string name="pref_key_chSetTemp_vis">pref_key_chSetTemp_vis</string>
    <string name="pref_key_dhwSetTemp_vis">pref_key_dhwSetTemp_vis</string>
    <string name="pref_key_dhwSetTemp_scale">pref_key_dhwSetTemp_scale</string>
    <string name="pref_key_dhwSetTemp_color">pref_key_dhwSetTemp_color</string>
</resources>
